# rscomp

./: Cargo.toml  README.md  iter.rs  lexer.rs  main.rs  token.rs
astnode/: Cargo.toml
astnode/src/: field.rs  lib.rs  node.rs  util.rs
astnode/src/node/: branch.rs  descriptor.rs  mod.rs  node.rs  terminality.rs
astnode/src/node_lib/: branch.rs  descriptor.rs  mod.rs  node.rs  optional.rs  terminality.rs
astnode/tests/: 00-compiles.rs  01-parse.rs  01-simple_leaf.rs  02-create-builder.rs  02-linkedtypes.rs  03-enumtype.rs  04-call-build.rs  04-with_enum.rs  05-simplecollection.rs  06-optional-field.rs  common.rs  enumtype.rs  optional-field.rs  progress.rs  redefined-prelude-types.rs  repeated-field.rs  simplecollection.rs  unrecognized-attribute.rs
astnode/tests/basic/: compiles.rs
astnode/tests/branch_terminality/: all_together.rs  ref.rs  stateful_leaf.rs  stateless_leaf.rs
astnode/tests/descriptor/: optional.rs
astnode/tests/enum/: many_variants.rs  one_variant.rs  ref_to_enum.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 07-repeated-field.rs
libcomp/: Cargo.toml  cargo2.toml
libcomp/src/: collection_builder.rs  collection_builder_test.rs  disjunct_result_wrapper.rs  errors.rs  iter.rs  iter_tests.rs  lexer.rs  lib.rs  optional.rs  parse.rs  test_const_generics.rs  testcommon.rs  tests_colbuilder.rs  tests_common.rs  tests_disjunct_result_wrapper.rs  tests_iter.rs  token.rs  vec.rs
libcomp/tests/: test1.rs
