[package]
name = "derive_builder"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version ="1.0.82", features=["full", "extra-traits"] }
quote = "1.0.16"
convert_case = "0.5.0"
proc-macro2 = "1.0.36"
# TODO
